@@ -89,6 +89,7 @@ Unreleased Version 2.2.2-pre
  * Feature: Make header and footer buttons on docks stretch further if there's empty space, making them easier to hit. Thanks MorrowShore for suggesting.
  * Fix: Properly truncate files when writing them on Android to avoid corruption from leftover junk at the end.
  * Feature: Allow cropping in the drawpile-timelapse command-line tool using -x/--crop.
+ * Fix: Compensate for discontinuity in the classic soft brush radius to make the transition look less bumpy. Thanks BulletPepper for reporting.
 
 2024-02-25 Version 2.2.2-beta.1
  * Server Feature: Allow adding a message when kicking someone through the admin API.
